:bug: Fix slider z-index issue [skip ci]

--- a/src/css/night/controls/_slider.sass
+++ b/src/css/night/controls/_slider.sass
@@ -26,6 +26,7 @@
   .imglykit-slider-slider
     width: auto
     position: relative
+    z-index: 1
 
     .imglykit-slider-background, .imglykit-slider-fill
       @include border-radius(6px)
